themes/bootprint3-tub/css/tub.css
/* ... */
/*
#result0, #result2, #result4, #result6, #result8, #result10, #result12, #result14, #result16, #result18 {
   /* background-color: #eff3dc;* /
   background-color: #ffffff;
}
*/

.result         {background-color: #ffffff !important; border-bottom: 2px dotted #CCC;}
.result a       {color: #576CA0;}
.result a:hover {text-decoration: none; color: #09f;}

.record {
   background: none repeat scroll 0 0 #ffffff !important;
}

#searchForm_lookfor, #searchForm_type {
   /*border-color: #eff3dc;*/
   border: none;
   padding-right: 20px; /* little space for the "delete"-x */
}

header .navbar .navbar-brand {
   background-image: url("../../../themes/bootprint3-tub/images/tubfind_logo.jpg");
   background-repeat: no-repeat;
   color: transparent;
   height: 53px;
   margin-top: 5px;
   width: 195px;
}

/*
tbody tr:nth-child(2n) td, tbody tr.even td {
   background: #e5ecf9 none repeat scroll 0 0;
}
*/

table.datagrid td {
   border-left: 1px solid #ffffff;
   border-right: 1px solid #ffffff;
   padding: 5px 10px;
}

table.datagrid td a {
   color: #003366;
}

.powered-by {
   background-image: url("../../../themes/bootprint3-tub/images/vufind_logo.png");
   background-size: 100px;
   background-position: right;
   background-repeat: no-repeat;
   height: 40px;
}

.tub_holdingguide {
  /* customize Position of buttons span */
}

.holdlink, .holdlink:active, .holdlink:hover, .holdlink:visited {
   background-color: #D8F2FC;
   color: #000;
   border: thin solid #aaaaaa;
   border-radius: 3px;
   opacity: 1;
   display: inline-block;
   margin: 10px 0 0 2px;
   padding: 0px;
   width: 118px;
   /* font-weight: bold; */
   font-size: 13px;
   text-align: left;
   text-decoration: none;
}
.holdlink:active  {}
.holdlink:visited {}
.holdlink:hover   {text-decoration: none !important; cursor: pointer; }

.holdlink i {
   padding: 3px;
   background-color: #D8F2FC;
   color: #53A1BF;
   font-size: 15px;
}
/* Reset fa-heart and fa-home - TODO for less cleanup */
i.fa-heart, i.fa-home, i.fa-search, i.fa-book, i.fa-external-link {background-image: url('none'); width: auto; height: auto; vertical-align: baseline;}


/* Customize button for single option */
.holdelectronic   {}
.holdshelf        {}
.holdorder        {}
.holdreserve      {}
.holdrefonly      {}
.holdil           {}
.holdwish         {}
.holdacquired     {}


/* info icon print */
.fa-info-circle {color: #27827F !important;}

.tub_fa-info_p {
   margin-top: 14px;
   margin-bottom: 0;
   padding-left: 2px;
   cursor: pointer !important;
}
/* info icon sfx-volltext (ganz oben) */
.tub_fa-info_e {
   margin-top: 4px;
   padding-left: 4px;
   vertical-align: middle;
   cursor: pointer !important;
}
/* info icon other (ill & acq proposal - multiline) UNUSED */
.tub_fa-info_x {
   margin-top: 20px;
   padding-left: 2px;
   cursor: pointer !important;
}
/* info icon facet */
.tub_fa-info_f {
   padding-left: 2px;
   cursor: pointer !important;
}

.tub_loading {
   // Loading icon; always this way: <i class="tub_loading fa fa-circle-o-notch fa-spin"></i> <?=$this->transEsc('Loading')?>...
}

/* TZ: z-index: Vufind */
.modal-dialog{z-index:1050;}

.tubbadge {
   float: right;
   font-size: 85%;
   margin-top: 1px;
   display: inline-block;
   font-size: 12px;
   font-weight: bold;
   line-height: 1;
   min-width: 10px;
   padding: 3px 7px;
   text-align: center;
   vertical-align: baseline;
   white-space: nowrap;
}

.tublabel-success {
   color: #028302;
}

.tublabel-danger {
   color: #a41915;
}

.tublabel-info {
   color: #1c5f74;
}

.tub_info_topright {width: 118px; margin: 0 0 0 2px; padding: 0;} /* Same length as Volltext-Image and order buttons */
.tub_resYear { position: absolute; bottom: 0; right:0; }

/* Cover & cols layout - letztlich muss es anders gemacht werden, aber fuers zeigen... */
div .left   {width: 17%; position: relative; min-height: 150px;}
div .middle {width: 59%; position: relative; min-height: 150px;}
div .right  {width: 24%; position: relative; min-height: 150px; padding-left: 15px;}
.result .checkbox label {position: absolute; top: 130px; left: 10px; font-weight: normal; padding: 3px; background-color: #ffffff; color: #000000; z-index: 1; -moz-border-top-right-radius: 10px; border-top-right-radius: 10px; opacity:0.95; min-width: 25px; text-align: center;} /* 21px/11px trifft genau bildecke */
.recordcover_fixed_width {width: 100px; min-width: 100px; min-height: 150px; max-height: 150px; padding: 0; margin:0; border: thin solid lightgrey}
#bookbag-menu {position: absolute; bottom: 7px; left: 89px; background-color: #fff; padding: 2px; font-size: 16px;}
#bookbag-menu .tub_star_on  {color: #EEC429;}
#bookbag-menu .tub_star_off {color: #FAEFD4;}

.tub_bbplus {
   background-image: url("../../../themes/bootprint3-tub/images/icons/star_faded.png");
   background-position: left top;
   background-repeat: no-repeat;
   padding-right: 30px;
}

.tub_bbminus {
   background-image: url("../../../themes/bootprint3-tub/images/icons/star.png");
   background-position: left top;
   background-repeat: no-repeat;
   padding-right: 30px;
}

.tub_label {
  /* Just renamed vufind class "label" to tub_label- no formatting needed */
}

.col-xs-11 {width: 99% !important;}

/* replace with fa-angle-right - saves 25kb (huge for just a single "letter")
http://fortawesome.github.io/Font-Awesome/cheatsheet/ - [&#xf105;]
-  todo: replace tub_lielement in code instead of using :before
.tub_lielement {
   background: rgba(0, 0, 0, 0) url("../../../themes/bootprint3-tub/images/small/sprite-1.png") no-repeat scroll 10px -596px;
   padding-left: 20px;
}
*/
.tub_lielement:before {
    content: "\f105";
    color: #6BC1BB;
    font-style: normal;
    font-size: 20px;
    font-family: FontAwesome;
    padding-left: 10px;
    /*
    position:absolute;
    top:0;
    left:-5px;
    */
 }
/* ... */

